# macro-circom

./: .gitignore  Cargo.toml  README.md  build.sh  package.json
.github/workflows/: release.yml  tests.yml
circuit/: appTransaction.circom  circuit.circom  circuit.light
macro-circom/: Cargo.toml
macro-circom/src/: errors.rs  main.rs
macro-circom/src/code_gen/: accounts_code.rs  check_utxo_code.rs  circom_code.rs  circom_main_code.rs  mod.rs
macro-circom/src/parsers/: mod.rs
macro-circom/tests/test-files/test-data-psp/: test_data.light
parser/: Cargo.toml
parser/src/: lang.lalrpop  lib.rs
src/: auto_generated_accounts_template.rs  checkUtxo.rs  check_utxo.rs  connecting_hash_circom.rs  errors.rs  ignoredContent.lalrpop  ignoredContent.rs  instance copy.lalrpop  instance.lalrpop  instance.rs  light_transaction.rs  light_utils_string.rs  main.rs  utils.rs
src/code_gen/: accounts_code.rs  auto_generated_accounts.rs  check_utxo_code.rs  circom_code.rs  circom_main.rs  circom_main_code.rs  connecting_hash_circom_template.rs  mod.rs
src/parsers/: circom_parser.lalrpop  circom_parser.rs  macro_parser.lalrpop  macro_parser.rs  mod.rs
tests/: auto_generated_accounts.rs1
tests/test-files/test-data-psp/: test_data.light
