[package]
name = "macro-circom"
version = "0.1.4"
edition = "2021"
description = "Circom DSL providing macros used in Light Protocol"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.71"
heck = "0.4.1"
regex = "1.7.3"
thiserror = "1.0.40"
lalrpop-util = {version="0.20.0" , features = ["lexer"]}
clap = "2"
handlebars = "4.4.0"
syn = {version="1"  , features = ["full", "extra-traits", "parsing"]}
serde_json = "1.0.107"

[build-dependencies]
lalrpop = "0.20"

[dev-dependencies]
quote = "1.0.33"
