[package]
name = "parser"
version = "2.1.4"
authors = ["Costa Group UCM","iden3"]
edition = "2018"
build = "build.rs"

[build-dependencies]
rustc-hex = "2.0.1"
lalrpop = { version = "0.20", features = ["lexer"] }
num-bigint-dig = "0.6.0"
num-traits = "0.2.6"

[dependencies]
program_structure = {git="https://github.com/iden3/circom", rev="ca3345681549c859af1f3f42128e53e3e43fe5e2"}
lalrpop-util = "0.20"
regex = "1.1.2"
rustc-hex = "2.0.1"
num-bigint-dig = "0.6.0"
num-traits = "0.2.6"
serde = "1.0.82"
serde_derive = "1.0.91"
handlebars = "4.4.0"
